package com.api.glovoCRM.Models.EstablishmentModels;

public class Establishment {
}
